# win32_midi

./: .metadata  README.md  pubspec.yaml
example/: .metadata  README.md  pubspec.yaml
example/lib/: main.dart
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: win32_midi.dart
windows/: CMakeLists.txt  CallbackManager.cpp  CallbackManager.h  win32_midi_plugin.cpp
windows/include/win32_midi/: win32_midi_plugin.h
